--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-	"name": "duststorm",
-	"description": "Interactive Books and Tutorials for the D Programming Language.",
-	"homepage": "http://dtutor.org",
-	"copyright": "Copyright © 2013",
+	"name":         "duststorm",
+	"description":  "Interactive Books and Tutorials for the D Programming Language.",
+	"homepage":     "https://dtutor.org",
+	"copyright":    "Copyright © 2013",
 	"authors": [
-		"Tyro[7]",
-        "Jude <1100110> Young"
+		            "Tyro[17] <...>",
+                    "Jude Young <1100110>"
 	],
+    "license":      "boostv1.0",
 	"dependencies": {
-        "vibe-d": ">=0.0.1",
-        "scrypt-d": "~master"
-	}
+                    "vibe-d": ">=0.0.1",
+                    "scrypt-d": "~master"
+	},
+    "buildRequirements": [
+                    "relaxProperties"
+    ]
 }
