--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
 	],
     "license":      "Boost v1.0",
 	"dependencies": {
-                    "vibe-d": ">=0.0.1",
-                    "scrypt-d": "~master"
+                    "vibe-d":   ">=0.0.1",
+                    "scrypt-d": "~master",
+                    "LuaD":     { "version": "~master", "path": "/home/jude/Code/LuaD/" },
 	},
     "buildRequirements": [
                     "relaxProperties"
